src/components/Dashboard.css
.collapsible {
  margin-top: 8px;
  background-color: #24305e;
  color: white;
  cursor: pointer;
  padding: 10px;
  height: 50px;
  width: 100%;
  max-width: 450px;
  position: static;
  border: none;
  text-align: left;
  outline: none;
  font-size: 15px;
  box-shadow: 1px 2px 4px 1px grey;
  z-index: 1;
  transform-origin: 0 0;
  transition: all 0.2s ease;
}

.collapsible:first-child {
  margin-top: 0;
}

.collapsible:active {
  box-shadow: 2px 2px 1px 1px #666;
  transform: translateY(2px);
}

@media (hover:hover) {
  .collapsible:hover, .collapsible:focus {
    background-color: #AA2E00;
  }
}

.content {
  overflow: hidden;
  transition: max-height 0.2s ease-out;
  color: black;
  width: 100%;
  max-width: 450px;
}

.plusMinusIcon {
  filter: invert(1);
  float: right;
  width: 20px;
  height: 20px;
}

/* Form styling */

.displayBlock input {
  height: auto;
}

.formTitle {
  color: black;
  font-weight: bold;
  font-size: 23px;
  background: none;
}

legend {
  width: 100%;
  position: relative;
  top: 7px;
  margin-bottom: 12px;
  background: #24305e;
  color: white;
}

input, select {
  padding: 5px;
  height: 34px;
  font-size: 16px;
  background-color: white;
}

.hourDisplay {
  width: 125px;
}

@media (max-width:426px) {
  .hourInputs {
    background-color: #CCCCCC;
  }
  .displayInline {
    display: block!important;
    text-align: center;
  }
  .hourDisplay {
    display: block;
    margin: 5px auto!important;
  }
  form label {
    display: flex;
    flex-direction: column;
    text-align: left;
  }
  .content input, .content select, .adminLogin input, .modal-content input {
    margin: 5px 0 5px 0;
  }
  .content form input:not(.hourDisplay):not([type="checkbox"]), .modal-content form input:not(.hourDisplay):not([type="checkbox"]) {
    width: 100%;
  }
}

@media (min-width:426px) {
  .displayInline {
    display: inline-block!important;
    width: 50%;
    margin: auto;
  }
  .content select, .content option, .modal-content select, .modal-content option {
    width: 208.4px!important
  }
  .content form input:not(.hourDisplay):not([type="checkbox"]), .modal-content form input:not(.hourDisplay):not([type="checkbox"]) {
    width: 208.4px;
  }
  form label {
    margin-bottom: 8px;
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
}

